@startuml classDiagramCarpooling
start

class User {
  +name: string
  -email: string
  -password: string
  +defaultDropOff: string
}

class Ride {
  +rideID: string
  +driver: User
  +date: Date
  +time: Time
  +pickupLocation: string
  +dropOff: string
  +availableSeats: int
  +passengers: User[]
  +addPassenger(user: User): boolean
  +removePassenger(user: User): boolean
}

class Car {
  +carID: string
  +driver: User
  +make: string
  +model: string
  +year: int
}

User "1" -- "0..*" Ride
User "1" -- "1" Car
Ride "1" -- "0..*" User
Car "1" -- "1" User


@enduml